# g3

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  README.md  config.coach-player.example.toml  config.example.toml  config.openai.example.toml  monitor_context_window.sh  tail_tool_logs.sh
agents/: archivist.md  breaker.md  carmack.md  fowler.md  hopper.md  huffman.md  lamport.md  scout.md
analysis/: memory.md
crates/g3-cli/: Cargo.toml
crates/g3-cli/src/: accumulative.rs  agent_mode.rs  autonomous.rs  cli_args.rs  coach_feedback.rs  commands.rs  completion.rs  display.rs  embedded_agents.rs  filter_json.rs  g3_status.rs  input_formatter.rs  interactive.rs  language_prompts.rs  lib.rs  machine_ui_writer.rs  project.rs  project_files.rs  simple_output.rs  streaming_markdown.rs  task_execution.rs  template.rs  ui_writer_impl.rs  utils.rs
crates/g3-cli/tests/: cli_integration_test.rs  coach_feedback_extraction_test.rs  filter_json_stress_test.rs  filter_json_test.rs  streaming_markdown_test.rs
crates/g3-computer-control/: Cargo.toml  build.rs
crates/g3-computer-control/examples/: debug_screenshot.rs  list_windows.rs  macax_demo.rs  safari_demo.rs  test_permission_prompt.rs  test_screencapture_direct.rs  test_screenshot_fix.rs  test_type_text.rs  test_vision.rs  test_window_capture.rs
crates/g3-computer-control/src/: lib.rs  types.rs
crates/g3-computer-control/src/macax/: controller.rs  mod.rs
crates/g3-computer-control/src/ocr/: mod.rs  tesseract.rs  vision.rs
crates/g3-computer-control/src/platform/: linux.rs  macos.rs  macos_window_matching_test.rs  windows.rs
crates/g3-computer-control/src/webdriver/: chrome.rs  diagnostics.rs  mod.rs  safari.rs
crates/g3-computer-control/tests/: integration_test.rs
crates/g3-core/: Cargo.toml
crates/g3-core/examples/: inspect_ast.rs  inspect_python_ast.rs  test_python_query.rs
crates/g3-core/logs/errors/: error_1768079503_unknown.json  error_1768081876_unknown.json  error_1768083039_unknown.json  error_1768085339_unknown.json  error_1768088342_unknown.json  error_1768088453_unknown.json  error_1768128158_unknown.json  error_1768128264_unknown.json  error_1768128473_unknown.json  error_1768128656_unknown.json  error_1768129035_unknown.json  error_1768129323_unknown.json  error_1768129339_unknown.json  error_1768129356_unknown.json  error_1768130842_unknown.json  error_1768131516_unknown.json  error_1768131530_unknown.json  error_1768131543_unknown.json  error_1768131797_unknown.json  error_1768131982_unknown.json  error_1768132117_unknown.json  error_1768132232_unknown.json  error_1768132268_unknown.json  error_1768132404_unknown.json  error_1768132454_unknown.json  error_1768132540_unknown.json  error_1768132553_unknown.json  error_1768133139_unknown.json  error_1768141273_unknown.json  error_1768141548_unknown.json  error_1768143784_unknown.json  error_1768143829_unknown.json  error_1768143855_unknown.json  error_1768143909_unknown.json  error_1768144572_unknown.json  error_1768145313_unknown.json  error_1768145517_unknown.json  error_1768146713_unknown.json  error_1768173587_unknown.json  error_1768175252_unknown.json  (+7 more)
crates/g3-core/src/: acd.rs  compaction.rs  context_window.rs  error_handling.rs  error_handling_test.rs  feedback_extraction.rs  fixed_filter_json.rs  fixed_filter_tests.rs  lib.rs  paths.rs  pending_research.rs  project.rs  prompts.rs  provider_config.rs  provider_registration.rs  retry.rs  session.rs  session_continuation.rs  stats.rs  streaming.rs  streaming_parser.rs  task_result.rs  task_result_comprehensive_tests.rs  tilde_expansion_tests.rs  tool_definitions.rs  tool_dispatch.rs  ui_writer.rs  utils.rs  webdriver_session.rs
crates/g3-core/src/code_search/: searcher.rs
crates/g3-core/src/tools/: acd.rs  executor.rs  file_ops.rs  memory.rs  misc.rs  mod.rs  research.rs  shell.rs  todo.rs  webdriver.rs
crates/g3-core/tests/: assistant_message_dedup_test.rs  assistant_message_test.rs  auto_continue_test.rs  background_process_demo_test.rs  cache_stats_integration_test.rs  code_search_test.rs  compaction_test.rs  consecutive_assistant_message_test.rs  duplicate_detection_test.rs  early_return_path_test.rs  end_of_turn_behavior_test.rs  final_output_todo_check_test.rs  incomplete_tool_call_test.rs  integration_blackbox_test.rs  json_parsing_stress_test.rs  missing_assistant_message_test.rs  mock_provider_integration_test.rs  parser_sanitization_test.rs  project_context_test.rs  read_file_token_limit_test.rs  read_file_utf8_test.rs  read_image_test.rs  streaming_completion_test.rs  streaming_parser_stuttering_test.rs  streaming_parser_test.rs  test_acd_integration.rs  test_agent_session_id.rs  test_context_thinning.rs  test_preflight_max_tokens.rs  test_reset_with_summary.rs  test_session_continuation.rs  test_todo_context_thinning.rs  test_todo_persistence.rs  test_token_counting.rs  todo_staleness_test.rs  tool_result_poisoning_test.rs
crates/g3-planner/: Cargo.toml
crates/g3-planner/src/: code_explore.rs  lib.rs  llm.rs  planner.rs  prompts.rs
crates/g3-planner/tests/: commit_history_ordering_test.rs  logging_test.rs  planner_test.rs  retry_feedback_test.rs
crates/g3-providers/: Cargo.toml
crates/g3-providers/src/: anthropic.rs  databricks.rs  embedded.rs  gemini.rs  lib.rs  mock.rs  openai.rs  streaming.rs
crates/g3-providers/src/embedded/: mod.rs  provider.rs
crates/g3-providers/src/embedded/adapters/: glm.rs  mod.rs
crates/g3-providers/tests/: cache_control_error_regression_test.rs  cache_control_integration_test.rs  gemini_serialization_test.rs
crates/studio/: Cargo.toml
crates/studio/src/: git.rs  main.rs  session.rs
docs/: CODE_SEARCH.md  CONTROL_COMMANDS.md  FLOCK_MODE.md  architecture.md  configuration.md  macax-tools.md  providers.md  tools.md
examples/: verify_message_id.rs
g3-plan/: completed_requirements_2025-12-10_16-55-05.md  completed_todo_2025-12-10_16-55-05.md  planner_history.txt
scripts/: install.sh  setup-chrome-for-testing.sh
tmp/: adam_streaming_proxy.html  anthropic_best_practices.html  async_stream_docs.html  biriukov_backpressure.html  (+15 more)
(+30 files in other folders)
