[package]
name = "studio"
version = "0.1.0"
edition = "2021"
description = "Multi-agent workspace manager for G3"

[[bin]]
name = "studio"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
termimad = "0.31"
